<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="addLocationViewPager"
            type="com.seokee.datecourse.adapter.AddLocationViewPagerAdapter" />
    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageButton
                    android:id="@+id/btn_AddLocationAdd"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:contentDescription="@string/addLocation_Add"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1"
                    android:layout_marginEnd="10dp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_add" />

                <ImageButton
                    android:id="@+id/btn_ThisLocationDelete"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginEnd="10dp"
                    android:contentDescription="@string/addLocation_Delete"
                    android:visibility="gone"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btn_AddLocationAdd"
                    app:layout_constraintHorizontal_bias="1"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.0"
                    app:srcCompat="@drawable/ic_close" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <EditText
                android:id="@+id/et_LocationName"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/addLocation_LName" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv_Address"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginVertical="5dp"
                    android:layout_weight="8"
                    android:text="@string/addLocation_Address"
                    android:layout_gravity="start|center"
                    android:gravity="start|center"
                    android:textSize="15sp"/>

                <Button
                    android:id="@+id/btn_AddressSearch"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/addLocation_AddressSearch" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:weightSum="10"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/addLocation_AtmosphereName" />

                <Spinner
                    android:id="@+id/sp_Category"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_weight="8"
                    android:contentDescription="@string/addLocation_SelectAtmosphere"/>
            </LinearLayout>

            <TextView
                android:id="@+id/textView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:text="@string/AddLocationDescriptionName" />

            <EditText
                android:id="@+id/et_Description"
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:ems="10"
                android:layout_margin="5dp"
                android:hint="@string/AddLocationDescription"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</layout>
