<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="loginViewModel"
            type="com.seokee.datecourse.view.login.LoginViewModel" />
        <variable
            name="signUpViewModel"
            type="com.seokee.datecourse.view.login.email.signup.SignUpViewModel" />
        <variable
            name="activity"
            type="com.seokee.datecourse.view.login.email.signup.SignUp" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.login.email.signup.SignUp">


        <EditText
            android:id="@+id/et_SignUp_ID"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/et_hint_email"
            android:inputType="textEmailAddress"
            android:text="@={signUpViewModel.iEmail}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.19999999" />

        <EditText
            android:id="@+id/et_SignUp_PW"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/et_hint_pw"
            android:inputType="textPassword"
            android:text="@={signUpViewModel.iPasswd}"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUp_ID"
            app:layout_constraintStart_toStartOf="@+id/et_SignUp_ID"
            app:layout_constraintTop_toBottomOf="@+id/et_SignUp_ID" />

        <EditText
            android:id="@+id/et_SignUp_PWRE"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:minHeight="48dp"
            android:hint="@string/et_hint_pwre"
            android:inputType="textPassword"
            android:text="@={signUpViewModel.iPasswdRe}"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUp_PW"
            app:layout_constraintStart_toStartOf="@+id/et_SignUp_PW"
            app:layout_constraintTop_toBottomOf="@+id/et_SignUp_PW" />

        <Button
            android:id="@+id/btn_SignUp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/main_color"
            android:onClick="@{(view) -> signUpViewModel.btnSignUp(view)}"
            android:paddingVertical="10dp"
            android:text="@string/btn_signup"
            android:textSize="15sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/et_SignUp_PWRE"
            app:layout_constraintStart_toStartOf="@+id/et_SignUp_PWRE"
            app:layout_constraintTop_toBottomOf="@+id/et_SignUp_PWRE"
            app:layout_constraintVertical_bias="0.0" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</layout>